# t8gpu

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: config.cmake.in  install.cmake
docs/: CMakeLists.txt
examples/: CMakeLists.txt
examples/compressible_euler/: CMakeLists.txt  kernels.cu  kernels.h  main.cu  solver.cu  solver.h
examples/rayleigh_taylor/: CMakeLists.txt  kernels.cu  kernels.h  kernels.inl  main.cu  solver.cu  solver.h
examples/subgrid/: CMakeLists.txt  kernels.h  kernels.inl  kernels_2d.cu  kernels_3d.cu  main_2d.cu  main_3d.cu  solver.h  solver.inl  solver_2d.cu  solver_3d.cu
include/memory/: memory_manager.h  shared_device_vector.h  shared_device_vector.inl
include/mesh/: mesh_manager.h
include/timestepping/: ssp_runge_kutta.h
include/utils/: meta.h  profiling.h
src/: CMakeLists.txt  advection_solver.cu  advection_solver.h  compressible_euler_solver.cu  compressible_euler_solver.h  cuda_utils.h  main.cu  memory_manager.h  memory_manager.inl  mesh_manager.h  mesh_manager.inl  shared_device_vector.h  shared_device_vector.inl
src/memory/: memory_manager.h  memory_manager.inl
src/mesh/: mesh_manager.h  mesh_manager.inl
src/solvers/compressible_euler/: kernels.cu  kernels.h  solver.cu  solver.h
src/timestepping/: ssp_runge_kutta.cu  ssp_runge_kutta.h  ssp_runge_kutta.inl
src/utils/: cuda.h  meta.h  profiling.h
t8gpu/memory/: memory_manager.h  memory_manager.inl  shared_device_vector.h  shared_device_vector.inl  subgrid_memory_manager.h  subgrid_memory_manager.inl
t8gpu/mesh/: mesh_manager.h  mesh_manager.inl  subgrid_mesh_manager.h  subgrid_mesh_manager.inl
t8gpu/timestepping/: ssp_runge_kutta.h  ssp_runge_kutta.inl
t8gpu/utils/: cuda.h  meta.h  profiling.h
